@@ -1,98 +1,110 @@
-/*
- ** ----------------------------------------------Matrix-------------------------------------------------------
- ** This class send all needed parameters to GPU via OpenGL to create image in the window frame.
- ** -----------------------------------------------------------------------------------------------------------
- ** init() - fill matrix and send vertex and indices data to Temp class.
- ** update() - change sprite's values if there any input callback and update vertex array in Temp class.
- ** getVertex() - return full vertex array of the matrix.
- ** getIndices() - return full indices array of the matrix.
- ** getPosition() - return position parameters of 1 sprite.
- ** getColor() - return color parameters of 1 sprite.
- ** vertexRewrite() - rewrite one of the parameters of any sprite in the matrix.
- ** -----------------------------------------------------------------------------------------------------------
- ** OTHER CLASS USAGE: ConfigValues, Temp_MatrixObject.
- ** PATTERN: None.
- */
-
 package GUI.GUI_Objects.MatrixObject.Matrix;
 
 import Config.ConfigValues;
 import GUI.GUI_Objects.MatrixObject.Physics.Material;
 import GUI.GUI_Objects.MatrixObject.Physics.MaterialRecord;
-import Temp.Temp_MatrixObject;
+import GUI.Render;
 
-import java.util.LinkedList;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 public class Matrix {
-    /** Matrix width calculated by it's allocated in ConfigValues width divided by sprite size.*/
+    /** The width of the matrix which is calculated by dividing the width of the window by the size of each sprite.*/
     public static int matrixWidth;
-    /** Matrix height calculated by it's allocated in ConfigValues height divided by sprite size.*/
+    /** The height of the matrix which is calculated by dividing the height of the window by the size of each sprite.*/
     public static int matrixHeight;
-    /** Matrix which consist each sprite's color information.*/
-    public static int[][][] materialMatrix;
-    /** List of changes to sprites created by user input.*/
-    public static LinkedList inputData;
-    /** List of changes to sprites created by their physics logic.*/
-    public static LinkedList bypassData;
-    /** Amount of vertex attribute parameters in 1 sprite.*/
-    private final int vertexDataAmount = 24;
-    /** Amount of indices in 1 sprite.*/
-    private final int indicesDataAmount = 6;
+    /** An array containing the rendering and physics parameters of each sprite.*/
+    public volatile static int[][][] matrix;
+
+    /** The list containing user-entered sprite parameters to be replaced in the matrix.*/
+    public volatile static CopyOnWriteArrayList inputData;
+    /** The list containing the sprite parameters changed by the physics algorithm, which must be replaced in the matrix.*/
+    public volatile static CopyOnWriteArrayList physicData;
 
     public Matrix() {
         matrixWidth = (ConfigValues.matrixWidth[1] - ConfigValues.matrixWidth[0]) / ConfigValues.spriteSize;
         matrixHeight = (ConfigValues.matrixHeight[1] - ConfigValues.matrixHeight[0]) / ConfigValues.spriteSize;
-        materialMatrix = new int[matrixWidth][matrixHeight][2];
+        matrix = new int[matrixWidth][matrixHeight][2];
+
+        inputData = new CopyOnWriteArrayList<>();
+        physicData = new CopyOnWriteArrayList<>();
     }
-    /** Fill matrix and send vertex and indices data to Temp class.*/
     public void init() {
         // Set sprites colors in matrix to 0.
         for (int w = 0; w < matrixWidth; w++) {
             for (int h = 0; h < matrixHeight; h++) {
-                materialMatrix[w][h][0] = 3;
-                materialMatrix[w][h][1] = 0;
+                matrix[w][h][0] = 3;
+                matrix[w][h][1] = 0;
             }
         }
 
-        // Fill vertex and indices array in Temp with actual data.
-        Temp_MatrixObject.vertexArray = getVertex();
-        Temp_MatrixObject.indicesArray = getIndices();
+        // Fill vertex and indices arrays with actual data.
+        Render.vertexArray = getVertex();
+        Render.indexArray = getIndices();
     }
 
-    /** Change sprite's values if there any input callback and update vertex array in Temp class.*/
-    public boolean update() {
-        // Checks sprite's physics changes in matrix and apply them.
-        if (bypassData.size() >= 4) {
-            while (bypassData.size() != 0) {
-                int xPos = (int) bypassData.removeFirst();
-                int yPos = (int) bypassData.removeFirst();
-                materialMatrix[xPos][yPos][0] = (int) bypassData.removeFirst();
-                materialMatrix[xPos][yPos][1] = (int) bypassData.removeFirst();
-
-                vertexRewrite(xPos, yPos, "Color", getColor(xPos, yPos));
-            }
-            return true;
-        }
-        // Checks user mouse input and apply changes in matrix and vertex by changing color parameters.
+    /** Checks for changes in inputData list and physicData list.*/
+    public void run() {
+        // Check user input changes and apply them to matrix.
         if (inputData.size() >= 3) {
             while (inputData.size() != 0) {
-                int xPos = (int) inputData.removeFirst();
-                int yPos = (int) inputData.removeFirst();
-                materialMatrix[xPos][yPos][0] = (int) inputData.removeFirst();
-                materialMatrix[xPos][yPos][1] = 0;
+                int xPos = (int) inputData.remove(0);
+                int yPos = (int) inputData.remove(0);
+                matrix[xPos][yPos][0] = (int) inputData.remove(0);
+                matrix[xPos][yPos][1] = 0;
 
                 vertexRewrite(xPos, yPos, "Color", getColor(xPos, yPos));
-                return true;
+                Render.isVertexArrayUpdated = true;
             }
         }
-        return false;
+
+        // Check physic changes and apply them to matrix.
+        if (physicData.size() >= 4) {
+            while (physicData.size() != 0) {
+                int xPos = (int) physicData.remove(0);
+                int yPos = (int) physicData.remove(0);
+                matrix[xPos][yPos][0] = (int) physicData.remove(0);
+                matrix[xPos][yPos][1] = (int) physicData.remove(0);
+
+                vertexRewrite(xPos, yPos, "Color", getColor(xPos, yPos));
+                Render.isVertexArrayUpdated = true;
+            }
+        }
     }
 
-    /** Return full vertex array of the matrix.*/
+    /** Overwrites the value of any sprite in vertex array.*/
+    public void vertexRewrite(int xPos, int yPos, String attribute, float[] parameterArray) {
+        // Changes the value of the sprite's position in the vertex array.
+        int parameterPointer = 0;
+        int vertex_parameterPointer = 0;
+        if (attribute.equals("Position")) {
+            for (int vertice = 0; vertice < 4; vertice++) {
+                for (int parameter = 0; parameter < 4; parameter++) {
+                    int vertexArray_position = xPos * matrixHeight * 24 +
+                            yPos * 24 + 4 * vertice + vertex_parameterPointer;
+                    Render.vertexArray[vertexArray_position] = parameterArray[parameterPointer];
+                    parameterPointer++;
+                    vertex_parameterPointer++;
+                }
+            }
+        }
+        // Changes the value of the sprite's color in the vertex array.
+        else if (attribute.equals("Color")) {
+            for (int vertice = 1; vertice <= 4; vertice++) {
+                for (int parameter = 0; parameter < 4; parameter++) {
+                    int vertexArray_position = xPos * matrixHeight * 24 +
+                            yPos * 24 + 2 * vertice + vertex_parameterPointer;
+                    Render.vertexArray[vertexArray_position] = parameterArray[parameterPointer];
+                    parameterPointer++;
+                    vertex_parameterPointer++;
+                }
+            }
+        }
+    }
+    /** Returns the vertex array of the matrix.*/
     public float[] getVertex() {
-        float[] vertexArray = new float[vertexDataAmount * matrixWidth * matrixHeight];
+        float[] vertexArray = new float[24 * matrixWidth * matrixHeight];
 
-        // Fill vertex array with data by using sprite position in matrix, and it's color.
+        // Creates a vertex array with the values of each sprite parameter.
         int parameterPointer = 0;
         for (int sprite_Xid = 0; sprite_Xid < matrixWidth; sprite_Xid++) {
             for (int sprite_Yid = 0; sprite_Yid < matrixHeight; sprite_Yid++) {
@@ -110,11 +122,11 @@ public class Matrix {
         }
         return vertexArray;
     }
-    /** Return full indices array of the matrix.*/
+    /** Return the index array of the matrix.*/
     public int[] getIndices() {
-        int[] indicesArray = new int[indicesDataAmount * matrixWidth * matrixHeight];
+        int[] indicesArray = new int[6 * matrixWidth * matrixHeight];
 
-        // Fill vertices array with data by using sprite position in matrix.
+        // Creates an index array with the values of each sprite pointers.
         int parameterPointer = 0;
         for (int sprite_Xid = 0; sprite_Xid < matrixWidth; sprite_Xid++) {
             for (int sprite_Yid = 0; sprite_Yid < matrixHeight; sprite_Yid++) {
@@ -134,13 +146,14 @@ public class Matrix {
         }
         return indicesArray;
     }
-    /** Return position parameters of 1 sprite.*/
+
+    /** Returns the position parameters of any sprite.*/
     public float[] getPosition(int xPos, int yPos) {
         float[] positionArray = new float[8];
         float stepWidth = 2F / (float) (ConfigValues.windowWidth / ConfigValues.spriteSize);
         float stepHeight = 2F / (float) (ConfigValues.windowHeight / ConfigValues.spriteSize);
 
-        // Algorithms to get X and Y coordinates of each vertice of the sprite.
+        // Returns the value of the position of any sprite point relative to the window's coordinate system.
         int arrayPointer = 0;
         for (int i = 0; i < 4; i++) {
             if (i == 0 || i == 2) {
@@ -162,52 +175,25 @@ public class Matrix {
         }
         return positionArray;
     }
-    /** Return color parameters of 1 sprite.*/
+    /** Returns the color parameters of any sprite.*/
     public float[] getColor(int xPos, int yPos) {
         float[] colorArray = new float[16];
 
-        // Algorithm to get color from each vertices of the sprite.
+        // Returns the color value of any sprite point based on its material.
         int arrayPointer = 0;
         for (int i = 0; i < 4; i++) {
             for (int j = 0; j < 4; j++) {
-                colorArray[arrayPointer] = getMaterialColor(materialMatrix[xPos][yPos][0], j);
+                colorArray[arrayPointer] = getMaterialColor(matrix[xPos][yPos][0], j);
                 arrayPointer++;
             }
         }
         return colorArray;
     }
-    /** Return RGBA color of the material.*/
-    public float getMaterialColor(int materialID, int elementID) {
-        Material materialInstance = MaterialRecord.getInstance(materialID);
+
+    /** Returns the color array of any material.*/
+    public float getMaterialColor(int material, int element) {
+        Material materialInstance = MaterialRecord.getInstance(material);
         float[] requestColor = materialInstance.getColor();
-        return requestColor[elementID];
-    }
-    /** Rewrite one of the parameters of any sprite in the matrix.*/
-    public void vertexRewrite(int xPos, int yPos, String attribute, float[] parameterArray) {
-        // Checks for attribute to change, and apply new data on old one.
-        int parameterPointer = 0;
-        int vertex_parameterPointer = 0;
-        if (attribute == "Position") {
-            for (int vertice = 0; vertice < 4; vertice++) {
-                for (int parameter = 0; parameter < 4; parameter++) {
-                    int vertexArray_position = xPos * matrixHeight * vertexDataAmount +
-                            yPos * vertexDataAmount + 4 * vertice + vertex_parameterPointer;
-                    Temp_MatrixObject.vertexArray[vertexArray_position] = parameterArray[parameterPointer];
-                    parameterPointer++;
-                    vertex_parameterPointer++;
-                }
-            }
-        }
-        else if (attribute == "Color") {
-            for (int vertice = 1; vertice <= 4; vertice++) {
-                for (int parameter = 0; parameter < 4; parameter++) {
-                    int vertexArray_position = xPos * matrixHeight * vertexDataAmount +
-                            yPos * vertexDataAmount + 2 * vertice + vertex_parameterPointer;
-                    Temp_MatrixObject.vertexArray[vertexArray_position] = parameterArray[parameterPointer];
-                    parameterPointer++;
-                    vertex_parameterPointer++;
-                }
-            }
-        }
+        return requestColor[element];
     }
 }
